[package]
name = "vxwk-rs-sdk"
version = "0.1.0"
edition = "2021"
description = "vxwk项目的rust版本SDK,支持全部api"
keywords = ["vxwk"]
author="广州桓创信息科技有限公司"
readme = "README.md"
repository = "https://github.com/wuntsong-org/vxwk-rs-sdk"
license-file = "LICENSE.txt"
homepage = "https://github.com/wuntsong-org"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde ={version="1", features=["derive"]}
url = "2.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
log = "0.4.20"
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.21"
rand="0.8"
thiserror="1.0.34"

[dev-dependencies]
env_logger = "0.10.1"
chrono = "0.4"